--- a/typst.toml
+++ b/typst.toml
@@ -1,16 +1,16 @@
 [package]
-name = "grape-suite"
-version = "2.0.0"
+name = "sapiens-suite"
+version = "1.0.0"
 compiler = "0.13.0"
 entrypoint = "src/library.typ"
 
-authors = ["Tristan Pieper <tristanpieper080803@gmail.com>"]
+authors = ["Jordan Engbers <jordan@desidlabs.com>"]
 
-repository = "https://github.com/piepert/grape-suite"
+repository = "https://github.com/jenga/sapiens-suite"
 license = "MIT"
 
-keywords = ["clean", "grape", "minimal", "paper"]
-description = "Library of templates for exams, seminar papers, homeworks, etc."
+keywords = ["clean", "minimal", "paper"]
+description = "Library of templates for proposals, essays, papers, design documents, etc."
 categories = ["layout", "paper", "presentation"]
 exclude = ["/img/*", "/examples/*"]
 
